EFRS-218: reformat code